@@ -1,0 +1,15 @@
+<hr>
+
+<p>Copyright (c) 2002 Dan York <b>CHANGE THIS TO YOUR NAME</b></p>
+
+<!-- You do NOT have to keep this line below in here. I have no issue if
+     you wish to remove it. -->
+
+<p><i>This list of questions  and answers was generated by 
+<a href="http://www.makefaq.org/">makefaq</a>.</i>
+
+<p><i>To modify this footer for your own use, the copyright and such
+can be changed in <code>faqfooter.html</code></i></p>
+
+</body>
+</html>
