@@ -1,0 +1,26 @@
+<html>
+<head>
+
+<!-- Change this title to something more appropriate for your FAQ. You 
+     do NOT need to leave the reference to makefaq.py in there. -->
+
+<title>Frequently-Asked Questions built by makefaq.py</title>
+
+<!-- If you do not want to use a CSS stylesheet, remove this next line. -->
+
+<link type="text/css" rel="stylesheet" href="faq.css">
+
+</head>
+<body bgcolor="#FFFFFF">
+
+<h1>
+<!-- Change this text line below to something more appropriate -->
+<code>makefaq</code> Frequently-Asked Questions
+
+</h1>
+
+<!-- Change this line to have your contact information in it. -->
+<p>For more information about this faq, please contact <b>EDIT FAQHEADER.HTML
+AND PUT YOUR NAME AND CONTACT INFO HERE</b>
+
+<hr>
