@@ -7,6 +7,9 @@ Bug fixes:
      newline-separated for afio types for now. Linux, HPUX, Solaris, AIX
      printf(1) utilities did do \0 = null.  Didn't test others...
 
+Other:
+ - Starting using "makefaq" to generate the questions page
+
 ----------------------------------------------------------------------
 Version 1.0pre6 (20030126)
 
